--- a/package.json
+++ b/package.json
@@ -14,19 +14,21 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.28",
-    "gatsby": "^2.19.45",
-    "gatsby-image": "^2.3.1",
+    "@babel/compat-data": "^7.11.0",
+    "@babel/preset-env": "^7.11.5",
+    "@emotion/core": "^10.0.35",
+    "gatsby": "^2.24.62",
+    "gatsby-image": "^2.4.19",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-nprogress": "^2.2.1",
-    "gatsby-plugin-react-helmet": "^3.2.1",
-    "gatsby-plugin-sass": "^2.2.1",
-    "gatsby-plugin-sharp": "^2.5.3",
-    "gatsby-remark-images": "^3.2.1",
+    "gatsby-plugin-nprogress": "^2.3.11",
+    "gatsby-plugin-react-helmet": "^3.3.11",
+    "gatsby-plugin-sass": "^2.3.13",
+    "gatsby-plugin-sharp": "^2.6.36",
+    "gatsby-remark-images": "^3.3.30",
     "gatsby-remark-relative-images": "^0.3.0",
-    "gatsby-source-filesystem": "^2.2.2",
-    "gatsby-transformer-remark": "^2.7.1",
-    "gatsby-transformer-sharp": "^2.4.3",
+    "gatsby-source-filesystem": "^2.3.30",
+    "gatsby-transformer-remark": "^2.8.35",
+    "gatsby-transformer-sharp": "^2.5.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1"
